k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: slavkokernel-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - api.slavkokernel.com
    secretName: slavkokernel-tls
  rules:
  - host: api.slavkokernel.com
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: slavkokernel-api
            port:
              number: 80
